# hosted_nostr_auth_server

./: .hsm-vpc-config  ARCHITECTURE.md  CHANGELOG.md  GITHUB_ISSUES.md  HSM_COST_COMPARISON.md  HSM_OVERVIEW.md  HSM_SCALING_STRATEGY.md  HSM_TESTING_WORKFLOW.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STRATEGY.md  PROJECT_ROADMAP.md  README.md  UPDATED_GITHUB_ISSUES.md  checklist.md  drizzle.config.ts  package-lock.json  package.json  plan.md  plans.md  test-frost-direct.js  test-frost-real.mjs  test-frost-with-hsm-sim.mjs  test-full-frost-workflow.mjs  test-hsm-basic.mjs  test-hsm-concept.mjs  test-hsm-many-users.mjs  test-hsm.mjs  test-trusted-dealer-workflow.mjs  test-trusted-dealer.mjs  tsconfig.json  vitest.config.ts  wrangler.jsonc
.github/ISSUE_TEMPLATE/: phase-0-foundation.md
coverage/: coverage-final.json  index.html
coverage/chusme_auth_server/: drizzle.config.ts.html  index.html
frost-wasm-core/: Cargo.toml  build.sh
frost-wasm-core/src/: lib.rs
migrations/: 0000_simple_stranger.sql
migrations/meta/: 0000_snapshot.json  _journal.json
public/: index.html  package-lock.json  package.json  sw.js  vite.config.js
public/src/: api.ts  main.ts  session.ts
scripts/: check-hsm-availability.sh  hsm-lifecycle.sh  initialize-hsm-cluster.sh  monitor-hsm-setup.sh  setup-vpc-for-hsm.sh  test-hsm-direct.sh
src/: frost.ts  index.ts  worker.ts
src/auth/: jwt.ts  (+3 more)
test/: characterization.spec.ts  frost-wasm.spec.ts  http-api.spec.ts  index.spec.ts  manual-characterization.md  setup.ts  tsconfig.json
workers/: package-lock.json  package.json  wrangler.toml
(+23 files in other folders)
