[package]
name = "frost-wasm-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# FROST implementation using zcash/frost-core
# TODO: Re-enable when implementing real FROST logic
# frost-core = "2.1.0"
# frost-secp256k1 = "2.1.0"
# frost-rerandomized = "2.1.0"

# WASM bindings
wasm-bindgen = "0.2"
js-sys = "0.3"
wee_alloc = "0.4.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptographic utilities
rand = { version = "0.8", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }

# Secret zeroization
zeroize = { version = "1.5", features = ["derive"] }

# Console logging for debugging
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Performance",
  "Window",
]

# Optimize for size and performance
[profile.release]
opt-level = "s"      # Optimize for size
lto = true           # Link-time optimization
codegen-units = 1    # Better optimization
panic = "abort"      # Smaller binary size